SUbquery expression implementation